# gg_week_iris

./: .gitignore  MLX Week 1_Maria  README  karyna.ipynb  pyproject.toml
notebooks/: iris_nn.ipynb
src/gg_week_iris/: nn.py
