[tool.poetry]
name = "gg-week-iris"
version = "0.1.0"
description = "iris"
authors = ["sid"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gg_week_iris", from = "src" }]

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.26.4"
pytest = "^8.0.2"
jupyter = "^1.0.0"
jupyterlab-vim = "^4.1.3"
scikit-learn = "^1.4.1.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
